cluster/storage/minio/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minio
  namespace: minio
spec:
  entryPoints:
    - websecure
  routes:
    - match: HOST(`minio.${SECRET_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: internal-ipwhitelist
          namespace: traefik
      services:
        - name: minio
          port: 9001
  tls:
    secretName: ${SECRET_CERT}
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: s3
  namespace: minio
spec:
  entryPoints:
    - websecure
  routes:
    - match: HOST(`s3.${SECRET_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: internal-ipwhitelist
          namespace: traefik
      services:
        - name: minio
          port: 9000
  tls:
    secretName: ${SECRET_CERT}
