cluster/storage/minio/s3-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: s3
  namespace: minio
spec:
  entryPoints:
    - websecure
  routes:
    - match: HOST(`s3.bharris.xyz`)
      kind: Rule
      services:
        - name: minio
          port: 9000
  tls:
    secretName: letsencrypt-wildcard-cert-bharris.xyz-prod
